// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`RxJs Operators findById handle undefined datasets 1`] = `{}`;

exports[`RxJs Operators findById handle undefined objects 1`] = `{}`;

exports[`RxJs Operators firstRecord handle undefined datasets 1`] = `{}`;

exports[`RxJs Operators firstRecord handle undefined objects 1`] = `{}`;

exports[`RxJs Operators getSubData should function 1`] = `
[
  {
    "val": "abc",
  },
  {
    "val": 456,
  },
]
`;

exports[`RxJs Operators getSubGridData should function 1`] = `
[
  {
    "val": "abc",
  },
  {
    "val": 456,
  },
]
`;

exports[`RxJs Operators mapToExtDataResult should function 1`] = `
{
  "data": [
    {
      "id": 1,
      "subData": [
        {
          "val": "xyz",
        },
        {
          "val": 123,
        },
      ],
    },
    {
      "id": 2,
      "subData": [
        {
          "val": "abc",
        },
        {
          "val": 456,
        },
      ],
    },
  ],
  "total": 2,
}
`;

exports[`RxJs Operators mapToExtDataResult should handle Arrays 1`] = `
{
  "data": [
    {
      "id": 1,
      "subData": [
        {
          "val": "xyz",
        },
        {
          "val": 123,
        },
      ],
    },
    {
      "id": 2,
      "subData": [
        {
          "val": "abc",
        },
        {
          "val": 456,
        },
      ],
    },
  ],
  "total": 2,
}
`;

exports[`RxJs Operators mapToExtDataResult should handle null 1`] = `
{
  "data": [],
  "total": 0,
}
`;

exports[`RxJs Operators should be created 1`] = `
[
  {
    "val": "abc",
  },
  {
    "val": 456,
  },
]
`;

exports[`RxJs Operators should findById 1`] = `
{
  "id": 2,
  "subData": [
    {
      "val": "abc",
    },
    {
      "val": 456,
    },
  ],
}
`;

exports[`RxJs Operators should match firstRecord 1`] = `
{
  "id": 1,
  "subData": [
    {
      "val": "xyz",
    },
    {
      "val": 123,
    },
  ],
}
`;
